docs: track VS Code workspace configuration
- Add reference copy of workspace.code-workspace for documentation
- Include README explaining workspace file location and purpose
- Update .gitignore to track workspace config files
- Workspace file contains all service task definitions

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ dist-ssr
 .vscode/*
 !.vscode/extensions.json
 !.vscode/tasks.json
+!.vscode/workspace.code-workspace
+!.vscode/README.md
 .idea
 .DS_Store
 *.suo
