--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,6 +51,25 @@
       }
     },
     {
+				"label": "Start Recipe Embeddings Service",
+				"type": "shell",
+				"command": "cd ${workspaceFolder:cooking-assistant-recipe-embeddings} && venv/bin/python -m uvicorn main:app --reload --port 8008",
+				"isBackground": true,
+				"problemMatcher": {
+					"pattern": {
+						"regexp": "^$",
+						"file": 1,
+						"location": 2,
+						"message": 3
+					},
+					"background": {
+						"activeOnStart": true,
+						"beginsPattern": ".",
+						"endsPattern": "Uvicorn running on"
+					}
+				}
+			},
+    {
       "label": "Start LLM Service",
       "type": "shell",
       "command": "cd ${workspaceFolder:cooking-assistant-llm} && source venv/bin/activate && uvicorn main:app --reload --port 8008",
@@ -74,7 +93,7 @@
     {
       "label": "Start Receipt Recognition Service",
       "type": "shell",
-      "command": "cd ${workspaceFolder:cooking-assistant-receipt-recognition-llm} && source venv/bin/activate && uvicorn main:app --reload --port 8009 --host 0.0.0.0",
+      "command": "cd ${workspaceFolder:cooking-assistant-receipt-recognition-llm} && venv/bin/python -m uvicorn main:app --reload --port 8009 --host 0.0.0.0",
       "isBackground": true,
       "problemMatcher": {
         "pattern": {
@@ -96,9 +115,9 @@
       "label": "Start All Services",
       "dependsOn": [
         "Start Backend (Django)",
-        "Start LLM Service",
-        "Start Receipt Recognition Service",
-        "Start Frontend (Web App)"
+					"Start Recipe Embeddings Service",
+					"Start Receipt Recognition Service",
+					"Start Frontend (Web App)"
       ],
       "problemMatcher": [],
       "presentation": {
