--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables - NEVER commit these
+.env
+.env.local
+.env.development
+.env.production
+.env.*.local
+
+# Vercel
+.vercel
+
+# Test coverage
+coverage/
+.nyc_output/
